--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
     <div class="max-w-2xl mx-auto bg-white bg-opacity-95 p-10 rounded-3xl shadow-2xl border-2 border-pink-200">
       <h2 class="text-3xl md:text-2xl font-bold mb-3 text-pink-600">Reception</h2>
       <p class="text-lg">Tuesday, 13th May 2025</p>
-      <p class="text-lg mb-4">at 7:00 PM</p>
+      <p class="text-lg mb-4">7:30 PM onwards</p>
       <h2 class="text-3xl md:text-2xl font-bold mb-3 text-pink-600">Wedding Ceremony</h2>
       <p class="text-lg">Wednesday, 14th May 2025</p>
-      <p class="text-lg">at 9:30 AM</p>
-      <p class="text-lg">HD Devegowda Convention Hall, K R Nagar</p>
+      <p class="text-lg">11:20 AM onwards</p>
+      <p class="text-lg">at HD Devegowda Convention Hall, K R Nagar</p>
     </div>
   </section>
 
